# shoplist

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: docker-image.yml
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: profile.html  register.html
account/templates/account/partials/profile/: email.html  email_form.html
config/: settings.py  urls.py
shoplist/: admin.py  forms.py  models.py  urls.py  views.py
shoplist/migrations/: 0001_initial.py  0002_userspace_owner.py
shoplist/static/shoplist/: style.css
shoplist/templates/shoplist/: base.html  home.html  item_list.html  shoppinglist.html  shoppinglist_list.html
shoplist/templates/shoplist/partials/: add_list.html  add_list_form.html  add_user_form.html  delete_space_button.html  item_li.html  new_space_form.html  shoppinglists.html  shoppinglists_container.html  space_item.html  space_users.html  space_users_block.html
shoplist/templates/shoplist/partials/lists/: add_list.html  button_hide.html  button_show.html  button_show_hide.html  collapse_list.html  delete_list_button.html  expanded_list.html  header_buttons_coll.html  header_buttons_exp.html  items_list.html
shoplist/templates/shoplist/partials/space/: new_space_block.html  new_space_form.html
shoplist/templates/shoplist/partials/users/: add_user_block.html  add_user_form.html  space_users_block.html
templates/: popup_message.html
templates/registration/: logged_out.html  login.html
